--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
   ],
   "description": "A collection of jQuery plugins for Bootstrap.",
   "dependencies": {
-    "bootstrap": "2.3.x"
+    "bootstrap": "3.0.0"
   }
 }
