Wrapping unit tests.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 nbproject/*
 node_modules
+dev-select.html
+dev-countries.html
+dev-datepicker.html
+dev-timepicker.html
+dev-timezone.html
