--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "vlamanna/bootstrapformhelpers",
 	"description": "A collection of jQuery plugins for Bootstrap.",
 	"homepage": "http://bootstrapformhelpers.com",
+	"version": "2.0.0",
 	"authors": [
 		{
 			"name": "Vincent Lamanna",
