--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 	"description": "A collection of jQuery plugins for Bootstrap.",
 	"homepage": "http://bootstrapformhelpers.com",
 	"version": "2.3.0",
+	"license": "Apache-2.0",
 	"authors": [
 		{
 			"name": "Vincent Lamanna",
