--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "bootstrap-formhelpers",
   "version": "2.3.0",
+  "main": ["./dist/js/bootstrap-formhelpers.js", "./dist/css/bootstrap-formhelpers.css"],
   "homepage": "http://bootstrapformhelpers.com",
   "authors": [
     "Vincent Lamanna <v@cakemail.com>"
