--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap-formhelpers",
-  "version": "2.3.0",
+  "version": "2.3.0-rv",
   "homepage": "http://bootstrapformhelpers.com",
   "authors": [
     "Vincent Lamanna <v@cakemail.com>"
