Add rv- prefix to package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-formhelpers",
+  "name": "rv-bootstrap-formhelpers",
   "version": "2.3.0-rv",
   "homepage": "http://bootstrapformhelpers.com",
   "authors": [
