--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-formhelpers",
+  "name": "rv-bootstrap-formhelpers",
   "description": "A collection of jQuery plugins for Bootstrap.",
   "version": "2.3.0-rv",
   "keywords": [
