--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "css"
   ],
   "homepage": "http://boostrapformhelpers.com",
-  "author": "Vincent Lamanna",
+  "contributors": [
+    "Vincent Lamanna",
+    "Xiyang Chen <settinghead@gmail.com>"
+  ],
   "scripts": {
     "test": "grunt test"
   },
