--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smc/bootstrap-formhelpers",
   "description": "A collection of jQuery plugins for Bootstrap.",
-  "version": "2.3.0-issues-1-2.3.1",
+  "version": "2.3.1",
   "keywords": [
     "bootstrap",
     "css"
